# dvdtheque-fastapi

dvdtheque-fastapi/: .dockerignore  .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
dvdtheque-fastapi/app/: __init__.py  main.py
dvdtheque-fastapi/app/api/v1/: film.py
dvdtheque-fastapi/app/core/: __init__.py  config.py
dvdtheque-fastapi/app/crud/: __init__.py  base.py  film.py
dvdtheque-fastapi/app/db/: __init__.py  base.py  session.py
dvdtheque-fastapi/app/models/: film.py
dvdtheque-fastapi/app/schemas/: film.py
fastapi-exemple/: main.py  pyproject.toml
